test/corpus/identifiers.txt
==================
Identifier cannot start with '@'
:error
==================

(@neo4j.com)

---



==================
Identifier can use '@' after first character
==================

(akollegger@neo4j.com)

---

(gram_pattern
  (node_pattern
      identifier: (symbol)))

==================
Identifier using snakecase '_' and mixed case
==================

(_0n96pdf6E)
(Im0_pWk0g4)

---

(gram_pattern
  (node_pattern
      identifier: (symbol))
  (node_pattern
      identifier: (symbol))
)

==================
Identifier using kebabcase '-' and mixed case
==================

(hello-there)

---

(gram_pattern
  (node_pattern
      identifier: (symbol)))

==================
Identifier using numbers
==================

(42)

---

(gram_pattern
  (node_pattern
      identifier: (integer)))

==================
Identifier using numbers with units are not allowed
:error
==================

(12px)

---

==================
Identifier using backticks
==================

(`+1`)

---

(gram_pattern
  (node_pattern
      identifier: (quoted_name
        content: (string_content))))

==================
Identifier using backticks with escaped backtick
==================

(`escape \` the backtick`)

---

(gram_pattern
  (node_pattern
      identifier: (quoted_name
        content: (string_content))))
