test/corpus/labeled_nodes.txt
==================
Labeled nodes: No label
==================

()

---

(gram_pattern
  (node_pattern))

==================
Labeled nodes: Single label
==================

(:A)

---

(gram_pattern
  (node_pattern
      labels: (labels
        (symbol))))

==================
Labeled nodes: Backtick label
==================

(:`Role Label`)

---

(gram_pattern
  (node_pattern
      labels: (labels
        (quoted_name
          content: (string_content)))))

==================
Labeled nodes: Two labels
==================

(:A:B)

---

(gram_pattern
  (node_pattern
      labels: (labels
        (symbol)
        (symbol))))

==================
Labeled nodes: Identity followed by labels
==================

(1:A:B)

---

(gram_pattern
  (node_pattern
      identifier: (integer)
      labels: (labels
        (symbol)
        (symbol))))
