test/corpus/labeled_relationships.txt
==================
Labeled relationship: Single label
==================

()-[:A]-()

---

(gram_pattern
  (relationship_pattern
    left: (node_pattern)
    kind: (undirected_arrow
      labels: (labels
        (symbol)))
    right: (node_pattern)))

==================
Labeled relationship: Backtick label
==================

()-[:`Edge Type`]-()

---

(gram_pattern
  (relationship_pattern
    left: (node_pattern)
    kind: (undirected_arrow
      labels: (labels
        (quoted_name
          content: (string_content))))
    right: (node_pattern)))

==================
Labeled relationship: Two labels
==================

()-[:A:B]-()

---

(gram_pattern
  (relationship_pattern
      left: (node_pattern)
      kind: (undirected_arrow
        labels: (labels
          (symbol)
          (symbol)))
      right: (node_pattern)))

==================
Labeled relationship: Two labels with an identity
==================

()-[r:A:B]-()

---

(gram_pattern
  (relationship_pattern
      left: (node_pattern)
      kind: (undirected_arrow
        identifier: (symbol)
        labels: (labels
          (symbol)
          (symbol)))
      right: (node_pattern)))
