test/corpus/number_graphs.txt
==================
Number graph: 1, 2 buckle your shoe
==================

(1)-->(2)

---

(gram_pattern
  (relationship_pattern
      left: (node_pattern
        identifier: (integer))
      kind: (right_arrow)
      right: (node_pattern
        identifier: (integer))))

==================
Number graph: 1 +1 = 2
==================

(1)-[`+1`]->(2)

---

(gram_pattern
  (relationship_pattern
      left: (node_pattern
        identifier: (integer))
      kind: (right_arrow
        identifier: (quoted_name
          content: (string_content)))
      right: (node_pattern
        identifier: (integer))))
