test/corpus/number_values.txt

==================
Numbers: integers
==================

({ i : 1 })

---

(gram
  (pattern
    (node (record (value_pair (symbol) (integer))))
  )
)


==================
Numbers: decimal
==================

({ d : 3.1495 })

---

(gram
  (pattern
    (node (record (value_pair (symbol) (decimal))))
  )
)

==================
Number: hexadecimal
==================

({ h : 0xCAFE })

---

(gram
  (pattern
    (node (record (value_pair (symbol) (hexadecimal))))
  )
)

==================
Number: octal with an '0'
==================

({ o : 042 })

---

(gram
  (pattern
    (node (record (value_pair (symbol) (octal))))
  )
)


==================
Number: measurements are numbers with some letters as a suffix
==================

({ height : 168cm })

---

(gram
  (pattern
    (node (record (value_pair (symbol) (measurement))))
  )
)
