test/corpus/records.txt
==================
Record empty
==================

{}

---

(gram_pattern
  root: (record))

==================
Record with integer property
==================

{ n : 1 }

---

(gram_pattern
  root: (record
    (record_property
      key: (symbol)
      value: (integer))))

==================
Record with double-quoted string property
==================

{ s : "a" }

---

(gram_pattern
  root: (record
    (record_property
      key: (symbol)
      value: (string_literal
        content: (string_content)))))

==================
Record with declare separator and a symbol property
==================

{ s :: string }

---

(gram_pattern
  root: (record
    (record_property
      key: (symbol)
      value: (symbol))))

==================
Record with quoted keys
==================

{ `title name` : "Alpha", "display title" : "Beta" }

---

(gram_pattern
  root: (record
    (record_property
      key: (quoted_name
        content: (string_content))
      value: (string_literal
        content: (string_content)))
    (record_property
      key: (double_quoted_name
        content: (string_content))
      value: (string_literal
        content: (string_content)))))

==================
Record followed by a Node
==================

{ s : "a" }

()

---

(gram_pattern
  root: (record
    (record_property
      key: (symbol)
      value: (string_literal
        content: (string_content))))
  (node_pattern)
)

==================
Record property may not us greater than operator
:error
==================

{ n > 1 }

---
