test/corpus/text_graphs.txt
==================
Hello world
==================

(hello)-->(world)

---

(gram_pattern
  (relationship_pattern
      left: (node_pattern
        identifier: (symbol))
      kind: (right_arrow)
      right: (node_pattern
        identifier: (symbol))))

==================
Hello dear world
==================

(hello)-[dear]->(world)

---

(gram_pattern
  (relationship_pattern
      left: (node_pattern
        identifier: (symbol))
      kind: (right_arrow
        identifier: (symbol))
      right: (node_pattern
        identifier: (symbol))))

==================
Hello dear world over there
==================

(hello)-[dear]->(world)-[over]->(there)

---

(gram_pattern
  (relationship_pattern
      left: (node_pattern
        identifier: (symbol))
      kind: (right_arrow
        identifier: (symbol))
      right: (relationship_pattern
        left: (node_pattern
          identifier: (symbol))
        kind: (right_arrow
          identifier: (symbol))
        right: (node_pattern
          identifier: (symbol)))))

==================
Hello "dear world" "over there"
==================

(hello)-[`dear world`]->(`over there`)

---

(gram_pattern
  (relationship_pattern
      left: (node_pattern
        identifier: (symbol))
      kind: (right_arrow
        identifier: (quoted_name
          content: (string_content)))
      right: (node_pattern
        identifier: (quoted_name
          content: (string_content)))))
