test/corpus/value_pair.txt
==================
Value pair: define values
==================

({ k1 : 1, k2 : 2 })

---

(gram_pattern
  (node_pattern
    record: (record
      (record_property
        key: (symbol)
        value: (integer))
      (record_property
        key: (symbol)
        value: (integer)))))

==================
Value pair: declare values
==================

({ k1 :: 1, k2 :: 2,  k3 :: number })

---

(gram_pattern
  (node_pattern
    record: (record
      (record_property
        key: (symbol)
        value: (integer))
      (record_property
        key: (symbol)
        value: (integer))
      (record_property
        key: (symbol)
        value: (symbol)))))

==================
Value pair: key names which start with '@' must be quoted
==================

({ "@k1" : "first number" })

---

(gram_pattern
  (node_pattern
      record: (record
        (record_property
          key: (double_quoted_name
            content: (string_content))
          value: (string_literal
            content: (string_content))))))

==================
Value pair: key names may use backticks
==================

({ `first number` : "first number" })

---

(gram_pattern
  (node_pattern
      record: (record
        (record_property
          key: (quoted_name
            content: (string_content))
          value: (string_literal
            content: (string_content))))))
